kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)   #Matches the root /, and captures anything after
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: backend-service #Matches anything starting with /api, like:  /api/users, /api/products, etc.
            port:
              number: 80
